--- a/post-one.html
+++ b/post-one.html
@@ -57,29 +57,29 @@
                   href="./blog.html">Blog</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact
-                  us</a>
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact us</a>
               </li>
               <li class="header-nav-item hidden xl:block">
                 <ul class="flex items-center gap-x-5">
                   <li>
                     <a href="https://www.facebook.com/" target="_blank">
-                      <i class="fa-brands fa-square-facebook header-facebook-icon about-header-brands-link"></i>
+                      <i
+                        class="fa-brands fa-square-facebook header-facebook-icon about-header-brands-link text-black"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://twitter.com/" target="_blank">
-                      <i class="fa-brands fa-twitter header-twitter-icon about-header-brands-link"></i>
+                      <i class="fa-brands fa-twitter header-twitter-icon about-header-brands-link text-black"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                      <i class="fa-brands fa-instagram header-instagram-icon about-header-brands-link"></i>
+                      <i class="fa-brands fa-instagram header-instagram-icon about-header-brands-link text-black"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.youtube.com/" target="_blank">
-                      <i class="fa-brands fa-youtube header-youtube-icon about-header-brands-link"></i>
+                      <i class="fa-brands fa-youtube header-youtube-icon about-header-brands-link text-black"></i>
                     </a>
                   </li>
                 </ul>
@@ -101,16 +101,17 @@
     <section class="pt-14 pb-10 md:pt-20 lg:pt-32 xl:pt-44 xl:pb-16">
       <div class="container mx-auto px-4 2xl:px-20">
         <div class="grid grid-cols-1 grid-flow-row items-start gap-y-8 xl:grid-cols-3">
-          <div class="mx-auto pr-[14px] xl:col-span-2 xl:mx-0">
+          <div class="mx-auto xl:pr-[14px] xl:col-span-2 xl:mx-0">
             <article class="mb-10" id="blog-posts">
               <div class="mb-5">
-                <img class="mb-5 xl:max-w-[880px] max-h-[500px]" src="./assets/images/blog-02b.jpg" alt="" width="880"
-                  height="500">
-                <h3 class="flex items-center mb-6 font-semibold text-3xl leading-10">
-                  <span class="inline-block mr-3 py-[6px] px-3 font-bold text-2xl text-white bg-orange-500">M</span>
+                <img class="max-h-[500px] mb-6 xl:mb-5 xl:max-w-[816px] 2xl:max-w-[880px]"
+                  src="./assets/images/blog-02b.jpg" alt="" width="880" height="500">
+                <h3 class="md:flex mb-5 font-semibold text-xl xl:items-center xl:text-3xl xl:leading-10">
+                  <span
+                    class="hidden md:inline-block mr-3 py-[6px] px-3 font-bold text-2xl text-white bg-orange-500">M</span>
                   Easy ways to implement wellbeing programs
                 </h3>
-                <p class="mb-10 text-neutral-500">
+                <p class="mb-5 text-justify text-neutral-500 xl:mb-10 xl:text-start">
                   Posuere morbi leo urna molestie at. Ipsum dolor sit amet consectetur adipiscing elit pellentesque
                   habitant morbi. Odio ut enim blandit volutpat maecenas volutpat. Tristique magna sit amet purus
                   gravida.
@@ -126,7 +127,7 @@
                   Vitae proin sagittis nisl rhoncus. Sagittis nisl rhoncus mattis rhoncus urna. Mauris vit
                 </p>
                 <blockquote class="flex mb-[30px] pr-[10px]">
-                  <i class="fa-sharp fa-solid fa-quote-right mr-8 text-6xl text-orange-500"></i>
+                  <i class="fa-sharp fa-solid fa-quote-right mr-5 text-6xl text-orange-500 xl:mr-8"></i>
                   <div>
                     <p class="mb-[15px] font-semibold text-[22px] leading-8">
                       We know that when you hire a removal company you're putting your trust in the people that move
@@ -136,7 +137,7 @@
                     <span class="font-semibold text-[15px] leading-5 text-orange-500">- Hanan Innocent</span>
                   </div>
                 </blockquote>
-                <p class="text-neutral-500">
+                <p class="text-justify text-neutral-500 xl:text-start">
                   Vitae proin sagittis nisl rhoncus. Sagittis nisl rhoncus mattis rhoncus urna. Mauris vitae ultricies
                   leo
                   integer. Elit eget gravida cum sociis natoque Amet consectetur adipiscing elit ut aliquam purus sit
@@ -147,9 +148,11 @@
                 </p>
               </div>
               <div>
-                <div class="flex items-center gap-x-7 mb-6">
-                  <img src="./assets/images/blog-singal.jpg" alt="Two girls watching to Ipad" width="423" height="310">
-                  <img src="./assets/images/blog-singal-2.jpg" alt="One person thinking" width="423" height="310">
+                <div class="flex flex-col items-center gap-y-6 mb-6 xl:flex-row xl:items-center xl:gap-y-0 xl:gap-x-5">
+                  <img class="w-full xl:max-w-[397px] 2xl:max-w-[423px]" src="./assets/images/blog-singal.jpg"
+                    alt="Two girls watching to Ipad" width="423" height="310">
+                  <img class="w-full xl:max-w-[397px] 2xl:max-w-[423px]" src="./assets/images/blog-singal-2.jpg"
+                    alt="One person thinking" width="423" height="310">
                 </div>
                 <h4 class="mb-2 font-semibold text-[28px] leading-9 capitalize">Types of software development
                   methodologies
@@ -196,12 +199,12 @@
               </div>
             </article>
 
-            <div class="flex items-center mb-11 bg-black rounded-lg">
-              <div class="mr-[35px]">
-                <img class="xl:min-w-[200px] xl:min-h-[200px]" src="./assets/images/avatar.jfif" alt="avatar"
-                  width="200" height="200">
+            <div class="md:flex items-center mb-11 bg-black rounded-lg">
+              <div class="mb-[30px] md:mr-[35px] md:mb-0">
+                <img class="w-full md:w-auto md:min-w-[200px] md:min-h-[200px]" src="./assets/images/avatar.jfif"
+                  alt="avatar" width="200" height="200">
               </div>
-              <div class="text-white">
+              <div class="pt-[10px] pr-7 pb-[30px] pl-[30px] text-white md:p-0 md:pr-2">
                 <a class="inline-block mb-[15px] font-bold text-xl leading-7" href="#">Admin</a>
                 <p>
                   Did you lose your phone or leave your account logged in at a public computer? You can log out
@@ -215,9 +218,9 @@
                 a manager”
               </h3>
               <ul>
-                <li class="flex xl:mb-[60px]">
-                  <div class="mr-10">
-                    <img class="xl:min-w-[100px] h-[100px] rounded-full" src="./assets/images/post-media-ava.jpeg"
+                <li class="mb-[30px] md:flex">
+                  <div class="mb-5 md:mr-10 md:mb-0">
+                    <img class="h-[100px] rounded-full md:min-w-[100px]" src="./assets/images/post-media-ava.jpeg"
                       alt="John Doe" width=" 100" height="100">
                   </div>
                   <div>
@@ -236,9 +239,10 @@
                       Replay</a>
                   </div>
                 </li>
-                <li class="flex xl:mb-[60px] pl-[100px]">
-                  <div class="mr-10">
-                    <img class="xl:min-w-[100px] h-[100px] rounded-full" src="./assets/images/post-media-ava2.jpeg"
+                <hr class="mb-[30px]">
+                <li class="mb-[30px] md:flex md:pl-[100px]">
+                  <div class="mb-5 md:mr-10 md:mb-0">
+                    <img class="h-[100px] rounded-full md:min-w-[100px]" src="./assets/images/post-media-ava2.jpeg"
                       alt="Leona Spencer" width="100" height="100">
                   </div>
                   <div>
@@ -257,9 +261,10 @@
                       Replay</a>
                   </div>
                 </li>
-                <li class="flex mb-[60px]">
-                  <div class="mr-10">
-                    <img class="xl:min-w-[100px] h-[100px] rounded-full" src="./assets/images/post-media-ava.jpeg"
+                <hr class="mb-[30px]">
+                <li class="mb-[30px] md:flex">
+                  <div class="mb-5 md:mr-10 md:mb-0">
+                    <img class="h-[100px] rounded-full md:min-w-[100px]" src="./assets/images/post-media-ava.jpeg"
                       alt="John Doe" width=" 100" height="100">
                   </div>
                   <div>
@@ -286,21 +291,22 @@
               <p class="mb-6 text-neutral-600">
                 Your email address will not be published. Required fields are marked *
               </p>
-              <textarea class="w-full mb-5 px-3 bg-transparent border-b-2 border-b-neutral-400" name="userComment"
+              <textarea class="w-full px-3 bg-transparent border-b-2 border-b-neutral-400 md:mb-5 " name="userComment"
                 rows="3" minlength="5" placeholder="Enter your comment here..."></textarea>
-              <div class="flex items-center mb-5">
-                <input class="w-full mr-3 py-6 px-3 bg-transparent border-b-2 border-b-neutral-400" type="text"
+              <div class="mb-5 md:flex mdLitems-center">
+                <input class="w-full py-6 px-3 bg-transparent border-b-2 border-b-neutral-400 md:mr-3" type="text"
                   name="userName" minlength="2" placeholder="Name">
                 <input class="w-full py-6 px-3 bg-transparent border-b-2 border-b-neutral-400" type="email"
                   name="userEmail" minlength="12" placeholder="Email">
               </div>
-              <input class="w-full mb-5 py-6 px-3 bg-transparent border-b-2 border-b-neutral-400" name="website"
+              <input class="w-full mb-8 py-6 px-3 bg-transparent border-b-2 border-b-neutral-400 md:mb-5" name="website"
                 type="text" placeholder="Website">
-              <label class="flex items-center font-semibold mb-4 text-neutral-500">
-                <input class="mr-2" type="checkbox">
+              <label class="flex items-start font-semibold mb-4 text-neutral-500">
+                <input class="mt-1 mr-2 xl:mt-0" type="checkbox">
                 Save my name, email, and website in this browser for the next time I comment.
               </label>
-              <button class="py-4 px-[40px] uppercase text-white bg-orange-500" type="submit">Post
+              <button class="py-4 px-[40px] font-semibold text-[14px] uppercase text-white bg-orange-500"
+                type="submit">Post
                 comment</button>
             </form>
           </div>
